removed :: before Instagram and some comments

--- a/src/assets/styles/tecss.css
+++ b/src/assets/styles/tecss.css
@@ -138,7 +138,7 @@ ul ul ul ul {
     display: inline-block;
 }
 
-.theme-icon--instagram::before {
+.theme-icon--instagram {
     content: "\28";
 }
 
